# fastapi_blog

./: .gitignore  README.md  pyproject.toml
fastapi_blog/: main.py  routes.py
fastapi_blog/auth/: api.py  service.py
fastapi_blog/base/: crud.py
fastapi_blog/blog/: models.py  schemas.py  service.py
fastapi_blog/blog/endpoint/: comment.py  post.py  tag.py
fastapi_blog/config/: settings.py
fastapi_blog/db/: base.py  database.py
fastapi_blog/db/migrations/: env.py
fastapi_blog/db/migrations/versions/: 0fb6f5f252a2_create_user.py  68b00c72aaee_comment.py  74eddcb92474_create_post.py  8287c1d67267_foreingkey.py  bac46e2c54c4_foren.py  c0aa29e5efc9_foren.py  de931e6e0967_tag.py
fastapi_blog/scripts/: createsuperuser.py
fastapi_blog/user/: api.py  models.py  schemas.py  security.py  service.py
tests/: test_fastapi_blog.py
